--- a/deny.toml
+++ b/deny.toml
@@ -8,6 +8,8 @@ ignore = [
     # Waiting for https://github.com/chronotope/chrono/pull/578
     "RUSTSEC-2020-0071",
     "RUSTSEC-2020-0159",
+    # Waiting for https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/issues/174
+    "RUSTSEC-2021-0124",
 ]
 
 [licenses]
@@ -78,11 +80,16 @@ version = "0.1"
 name = "pin-project-lite"
 version = "0.1"
 
-# ignore duplicated nom dependency because cexpr depends on an old version
+# ignore duplicated nom dependency because cexpr, m3u8-rs depends on an old version
 # https://github.com/jethrogb/rust-cexpr/issues/26
 [[bans.skip]]
 name = "nom"
 version = "5"
+
+# ignore duplicated arrayvec dependency because nom 5 depends on an old version
+[[bans.skip]]
+name = "arrayvec"
+version = "0.5"
 
 # ignore duplicated nom dependency because tokio v0.2 depends on an old version
 [[bans.skip]]
@@ -130,7 +137,7 @@ name = "system-deps"
 version = "3"
 [[bans.skip]]
 name = "cfg-expr"
-version = "0.8"
+version = "0.7"
 
 # ignore duplicated crc dependency because ffv1 depends on an old version
 # https://github.com/rust-av/ffv1/issues/21
