--- a/version-helper/Cargo.toml
+++ b/version-helper/Cargo.toml
@@ -13,4 +13,4 @@ edition = "2021"
 rust-version = "1.56"
 
 [dependencies]
-chrono = "0.4.6"
+chrono = { version = "0.4.19", default-features = false, features = ["std"] }
