--- a/audio/audiofx/Cargo.toml
+++ b/audio/audiofx/Cargo.toml
@@ -12,13 +12,16 @@ rust-version = "1.56"
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
 gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
 gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
+anyhow = "1"
 byte-slice-cast = "1.0"
 num-traits = "0.2"
 once_cell = "1.0"
 ebur128 = "0.1"
+hrtf = "0.7"
 nnnoiseless = { version = "0.3", default-features = false }
 smallvec = "1"
 atomic_refcell = "0.1"
+rayon = "1.5"
 
 [lib]
 name = "gstrsaudiofx"
