--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/centricular/webrtcsink/"
 build = "build.rs"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20", "ser_de"] }
 gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
 gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
 gst-webrtc = { package = "gstreamer-webrtc", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
@@ -25,6 +25,12 @@ serde = "1"
 serde_derive = "1"
 serde_json = "1"
 fastrand = "1.0"
+
+[dev-dependencies]
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
+tracing-log = "0.1"
+uuid = { version = "0.8", features = ["v4"] }
 
 [lib]
 name = "webrtcsink"
@@ -50,3 +56,6 @@ versioning = false
 
 [package.metadata.capi.pkg_config]
 requires_private = "gstreamer-rtp >= 1.20, gstreamer-webrtc >= 1.20, gstreamer-1.0 >= 1.20, gstreamer-app >= 1.20, gstreamer-video >= 1.20, gstreamer-sdp >= 1.20, gobject-2.0, glib-2.0, gmodule-2.0"
+
+[[example]]
+name = "webrtcsink-stats-server"
