--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -9,20 +9,24 @@ edition = "2021"
 rust-version = "1.56"
 
 [dependencies]
+async-task = "4.0.3"
+concurrent-queue = "1.2.2"
+futures = { version = "0.3.17", features = ["thread-pool"] }
 libc = "0.2"
 gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-net = { package = "gstreamer-net", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 once_cell = "1"
-pin-project-lite = "0.2.7"
-tokio = { git = "https://github.com/fengalin/tokio", tag = "tokio-0.2.13-throttling.1", features = ["io-util", "macros", "rt-core", "sync", "stream", "time", "tcp", "udp", "rt-util"] }
-futures = { version = "0.3", features = ["thread-pool"] }
+pin-project-lite = "0.2.0"
+polling = "2.0.0"
 rand = "0.8"
+slab = "0.4.2"
 socket2 = {features = ["all"], version = "0.4"}
+waker-fn = "1.1"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["winsock2", "processthreadsapi"] }
+winapi = { version = "0.3.9", features = ["winsock2", "processthreadsapi"] }
 
 [dev-dependencies]
 gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
