ci: Remove the gstreamer directory if it exists already for the gst-build job
Otherwise it will regularly fail because the runner already has the
directory available for some reason.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -201,6 +201,7 @@ gst-build:
   script:
     - P=$(pwd)
     - cd ..
+    - rm -rf gstreamer
     - git clone --depth 1 https://gitlab.freedesktop.org/gstreamer/gstreamer.git --branch main
     - cd gstreamer
     - ln -s $P subprojects/gst-plugins-rs
