--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -18,6 +18,7 @@ gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gst
 once_cell = "1.0"
 smallvec = "1"
 anyhow = "1"
+thiserror = "1"
 futures = "0.3"
 async-std = { version = "1", features = ["unstable"] }
 async-tungstenite = { version = "0.16", features = ["async-std-runtime", "async-native-tls"] }
