add spotify plugin
Plugin adding an element to play audio from Spotify.

--- a/meson.build
+++ b/meson.build
@@ -59,6 +59,7 @@ plugins = {
   'gst-plugin-webp': 'libgstrswebp',
   'gst-plugin-videofx': 'libgstvideofx',
   'gst-plugin-uriplaylistbin': 'libgsturiplaylistbin',
+  'gst-plugin-spotify': 'libgstspotify',
 }
 
 extra_env = {}
