spotify: relicense to MPL-2.0

--- a/audio/spotify/Cargo.toml
+++ b/audio/spotify/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-spotify"
 version = "0.8.0"
 authors = ["Guillaume Desmottes <guillaume@desmottes.be>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "MPL-2.0"
 description = "Spotify GStreamer Plugin"
 edition = "2021"
 rust-version = "1.56"
