add textahead plugin
Plugin displaying upcoming text buffers ahead.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ members = [
     "video/rspng",
     "video/hsv",
     "video/webp",
+    "text/ahead",
     "text/wrap",
     "text/json",
     "text/regex",
@@ -56,6 +57,7 @@ default-members = [
     "video/rav1e",
     "video/rspng",
     "video/hsv",
+    "text/ahead",
     "text/wrap",
     "text/json",
     "text/regex",
