--- a/version-helper/Cargo.toml
+++ b/version-helper/Cargo.toml
@@ -12,4 +12,4 @@ keywords = ["gstreamer", "multimedia", "cargo"]
 edition = "2018"
 
 [dependencies]
-chrono = { version = "0.4.19", default-features = false, features = ["std"] }
+chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
