gst-plugin-version-helper: Work around broken file times in crates from crates.io
Fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/issues/177

--- a/version-helper/Cargo.toml
+++ b/version-helper/Cargo.toml
@@ -13,4 +13,4 @@ edition = "2021"
 rust-version = "1.56"
 
 [dependencies]
-chrono = { version = "0.4.19", default-features = false, features = ["std"] }
+chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
