deny: ignore aes related errors

--- a/deny.toml
+++ b/deny.toml
@@ -8,6 +8,10 @@ ignore = [
     # Waiting for https://github.com/chronotope/chrono/pull/578
     "RUSTSEC-2020-0071",
     "RUSTSEC-2020-0159",
+    # Waiting for https://github.com/librespot-org/librespot/issues/937
+    "RUSTSEC-2021-0059",
+    "RUSTSEC-2021-0060",
+    "RUSTSEC-2021-0061",
 ]
 
 [licenses]
