--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 rust-version = "1.56"
 
 [dependencies]
-gst = { package="gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package="gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.18", version = "0.18" }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.18", version = "0.18" }
 sodiumoxide = "0.2.1"
 once_cell = "1.3.0"
 hex = "0.4"
@@ -27,10 +27,14 @@ rand = "0.8"
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.18"
+version = "0.18"
 package="gstreamer-check"
 
 [dev-dependencies.gst-app]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.18"
+version = "0.18"
 package="gstreamer-app"
 
 [lib]
@@ -54,7 +58,7 @@ path = "examples/decrypt_example.rs"
 required-features = ["serde", "serde_json", "clap"]
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path = "../../version-helper", version = "0.7" }
 
 [features]
 # GStreamer 1.14 is required for static linking
