--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -14,14 +14,14 @@ reqwest = { version = "0.11", features = ["cookies", "gzip"] }
 futures = "0.3"
 headers = "0.3"
 mime = "0.3"
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.18", version = "0.18" }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.18", version = "0.18" }
 tokio = { version = "1.0", default-features = false, features = ["time", "rt-multi-thread"] }
 once_cell = "1.0"
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["server"] }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.18", version = "0.18", features = ["v1_10"] }
 
 [lib]
 name = "gstreqwest"
@@ -29,7 +29,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path = "../../version-helper", version = "0.7" }
 
 [features]
 # GStreamer 1.14 is required for static linking
