--- a/text/regex/Cargo.toml
+++ b/text/regex/Cargo.toml
@@ -14,6 +14,8 @@ regex = "1.5"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.18"
+version = "0.18"
 features = ["v1_14"]
 package="gstreamer"
 
@@ -23,10 +25,12 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path = "../../version-helper", version = "0.7" }
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.18"
+version = "0.18"
 package="gstreamer-check"
 
 [features]
