--- a/utils/uriplaylistbin/Cargo.toml
+++ b/utils/uriplaylistbin/Cargo.toml
@@ -8,13 +8,13 @@ edition = "2018"
 description = "Playlist Plugin"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"] }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.18", version = "0.18", features = ["v1_14"] }
 once_cell = "1.0"
 anyhow = "1"
 crossbeam-channel = "0.5"
 
 [dev-dependencies]
-gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs",  features = ["v1_14"]}
+gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.18", version = "0.18",  features = ["v1_14"]}
 structopt = "0.3"
 url = "2.2"
 more-asserts = "0.2"
@@ -29,7 +29,7 @@ name = "playlist"
 path = "examples/playlist.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path = "../../version-helper", version = "0.7" }
 
 [features]
 # GStreamer 1.14 is required for static linking
