--- a/video/videofx/Cargo.toml
+++ b/video/videofx/Cargo.toml
@@ -8,27 +8,35 @@ description = "Video Effects Plugin"
 edition = "2021"
 
 [dependencies]
-cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"] }
+cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15", version = "0.15", features=["use_glib"] }
 atomic_refcell = "0.1"
 once_cell = "1.0"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.18"
+version = "0.18"
 features = ["v1_16"]
 package = "gstreamer"
 
 [dependencies.gst-base]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.18"
+version = "0.18"
 features = ["v1_16"]
 package = "gstreamer-base"
 
 [dependencies.gst-video]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.18"
+version = "0.18"
 features = ["v1_16"]
 package = "gstreamer-video"
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.18"
+version = "0.18"
 package = "gstreamer-check"
 
 [lib]
@@ -37,7 +45,7 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path="../../version-helper" }
+gst-plugin-version-helper = { path = "../../version-helper", version = "0.7" }
 
 [features]
 # GStreamer 1.14 is required for static linking
