rav1enc: Set mastering display info, content light level and HDR related colorimetry
Configurable behind the "hdr" cargo feature that is enabled by default
but requires GStreamer 1.18.

--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -26,10 +26,12 @@ path = "src/lib.rs"
 gst-plugin-version-helper = { path="../../version-helper" }
 
 [features]
+default = ["hdr"]
 # GStreamer 1.14 is required for static linking
 static = ["gst/v1_14"]
 capi = []
 asm = ["rav1e/asm"]
+hdr = ["gst-video/v1_18"]
 
 [package.metadata.capi]
 min_version = "0.8.0"
