rusoto: s3sink: Implement timeout/retry for part uploads
Rusoto does not implement timeouts or retries for any of its HTTP
requests. This is particularly problematic for the part upload stage of
multipart uploads, as a blip in the network could cause part uploads to
freeze for a long duration and eventually bail.

To avoid this, for part uploads, we add (a) (configurable) timeouts for
each request, and (b) retries with exponential backoff, upto a
configurable duration.

It is not clear if/how we want to do this for other types of requests.
The creation of a multipart upload should be relatively quick, but the
completion of an upload might take several minutes, so there is no
one-size-fits-all configuration, necessarily.

It would likely make more sense to implement some sensible hard-coded
defaults for these other sorts of requests.

--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -21,7 +21,7 @@ rusoto_credential = "0.47"
 rusoto_signature = "0.47"
 url = "2"
 percent-encoding = "2"
-tokio = { version = "1.0", features = [ "rt-multi-thread" ] }
+tokio = { version = "1.0", features = [ "rt-multi-thread", "time" ] }
 async-tungstenite = { version = "0.16", features = ["tokio", "tokio-runtime", "tokio-native-tls"] }
 nom = "7"
 crc = "2"
@@ -32,6 +32,7 @@ serde_derive = "1"
 serde_json = "1"
 atomic_refcell = "0.1"
 base32 = "0.4"
+backoff = { version = "0.4", features = [ "futures", "tokio" ] }
 
 [lib]
 name = "gstrusoto"
