--- a/generic/file/Cargo.toml
+++ b/generic/file/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-file"
 version = "0.9.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 description = "Rust File Plugin"
 edition = "2021"
 rust-version = "1.57"
