--- a/video/cdg/Cargo.toml
+++ b/video/cdg/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-cdg"
 version = "0.9.0"
 authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 description = "CDG Plugin"
 edition = "2021"
 rust-version = "1.57"
