--- a/video/ffv1/Cargo.toml
+++ b/video/ffv1/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-ffv1"
 version = "0.9.0"
 authors = ["Arun Raghavan <arun@asymptotic.io>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 description = "FFV1 Decoder Plugin"
 edition = "2021"
 rust-version = "1.57"
