--- a/video/rspng/Cargo.toml
+++ b/video/rspng/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-rspng"
 version = "0.9.0"
 authors = ["Natanael Mojica <neithanmo@gmail.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.57"
 description = "An PNG encoder/decoder written in pure Rust"
