Use SPDX license format in Cargo.toml

--- a/tutorial/Cargo.toml
+++ b/tutorial/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-tutorial"
 version = "0.8.3"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.56"
 description = "Rust Tutorial Plugin"
