--- a/video/hsv/Cargo.toml
+++ b/video/hsv/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-hsv"
 version = "0.8.3"
 authors = ["Julien Bardagi <julien.bardagi@gmail.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.56"
 description = "HSV manipulation elements, written in Rust"
