--- a/audio/claxon/Cargo.toml
+++ b/audio/claxon/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-claxon"
 version = "0.8.3"
 authors = ["Ruben Gonzalez <rgonzalez@fluendo.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 description = "Claxon FLAC Decoder Plugin"
 edition = "2021"
 rust-version = "1.56"
