--- a/video/gif/Cargo.toml
+++ b/video/gif/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-gif"
 version = "0.8.3"
 authors = ["Markus Ebner <info@ebner-markus.de>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 edition = "2021"
 rust-version = "1.56"
 description = "GStreamer GIF plugin"
