--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -3,7 +3,7 @@ name = "gst-plugin-rav1e"
 version = "0.8.3"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 description = "rav1e AV1 Encoder Plugin"
 edition = "2021"
 rust-version = "1.56"
