videofx: Add colordetect video filter
This new video filter is able to detect the dominant color in a video frame.
When the color has changed from the previous frame the filter posts an Element
message on the bus, the associated structure is named `colordetect` and has two
fields:

* a string field named `dominant-color`
* a list field containing the whole color palette, stored as uint values, sorted
  by dominance, with more dominant colors first

--- a/video/videofx/Cargo.toml
+++ b/video/videofx/Cargo.toml
@@ -11,6 +11,10 @@ edition = "2021"
 cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"] }
 atomic_refcell = "0.1"
 once_cell = "1.0"
+# color-thief = "0.2"
+# https://github.com/RazrFalcon/color-thief-rs/pull/4
+color-thief = { git = "https://github.com/philn/color-thief-rs", branch = "max-colors-respect" }
+color-name = "1.0.0"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
