--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -21,7 +21,7 @@ once_cell = "1.0"
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["server"] }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 
 [lib]
 name = "gstreqwest"
@@ -32,8 +32,7 @@ path = "src/lib.rs"
 gst-plugin-version-helper = { path="../../version-helper" }
 
 [features]
-# GStreamer 1.14 is required for static linking
-static = ["gst/v1_14"]
+static = []
 capi = []
 
 [package.metadata.capi]
