--- a/audio/csound/Cargo.toml
+++ b/audio/csound/Cargo.toml
@@ -32,8 +32,7 @@ path = "examples/effect_example.rs"
 gst-plugin-version-helper = { path = "../../version-helper" }
 
 [features]
-# GStreamer 1.14 is required for static linking
-static = ["gst/v1_14"]
+static = []
 capi = []
 
 [package.metadata.capi]
