--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -57,8 +57,7 @@ required-features = ["serde", "serde_json", "clap"]
 gst-plugin-version-helper = { path="../../version-helper" }
 
 [features]
-# GStreamer 1.14 is required for static linking
-static = ["gst/v1_14"]
+static = []
 capi = []
 
 [package.metadata.capi]
