--- a/video/gif/Cargo.toml
+++ b/video/gif/Cargo.toml
@@ -31,8 +31,7 @@ path = "examples/testvideosrc2gif.rs"
 gst-plugin-version-helper = { path="../../version-helper" }
 
 [features]
-# GStreamer 1.14 is required for static linking
-static = ["gst/v1_14"]
+static = []
 capi = []
 
 [package.metadata.capi]
