--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -10,7 +10,7 @@ rust-version = "1.57"
 
 [dependencies]
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
+gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 rav1e = { version = "0.5", default-features = false }
 once_cell = "1.0"
 atomic_refcell = "0.1"
@@ -28,8 +28,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 
 [features]
 default = ["hdr"]
-# GStreamer 1.14 is required for static linking
-static = ["gst/v1_14"]
+static = []
 capi = []
 asm = ["rav1e/asm"]
 hdr = ["gst-video/v1_18"]
