net/onvif: implement ONVIF metadata processing elements
- RTP payloader and depayloader

- Aggregator to pair per-frame metadata with media frames

- Overlay to render detected shapes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "generic/sodium",
     "generic/threadshare",
     "net/hlssink3",
+    "net/onvif",
     "net/reqwest",
     "net/rusoto",
     "utils/fallbackswitch",
@@ -45,6 +46,7 @@ default-members = [
     "audio/lewton",
     "generic/file",
     "generic/threadshare",
+    "net/onvif",
     "net/reqwest",
     "net/rusoto",
     "utils/fallbackswitch",
