add snapshotting tracer
Convenient tracer to dump all the existing pipelines when receiving the
SIGUSR1 Unix signal.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "net/rusoto",
     "utils/fallbackswitch",
     "utils/togglerecord",
+    "utils/tracers",
     "utils/uriplaylistbin",
     "video/cdg",
     "video/closedcaption",
@@ -52,6 +53,7 @@ default-members = [
     "net/rusoto",
     "utils/fallbackswitch",
     "utils/togglerecord",
+    "utils/tracers",
     "utils/uriplaylistbin",
     "video/cdg",
     "video/ffv1",
