--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ members = [
     "net/hlssink3",
     "net/onvif",
     "net/reqwest",
-    "net/rusoto",
+    "net/aws",
     "utils/fallbackswitch",
     "utils/togglerecord",
     "utils/tracers",
@@ -50,7 +50,7 @@ default-members = [
     "generic/threadshare",
     "net/onvif",
     "net/reqwest",
-    "net/rusoto",
+    "net/aws",
     "utils/fallbackswitch",
     "utils/togglerecord",
     "utils/tracers",
